--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,18 @@ group = 'io.resiliency'
 archivesBaseName = 'app'
 sourceCompatibility = '14'
 
+configurations {
+    compileClasspath {
+        resolutionStrategy.activateDependencyLocking()
+    }
+    runtimeClasspath {
+        resolutionStrategy.activateDependencyLocking()
+    }
+    annotationProcessor {
+        resolutionStrategy.activateDependencyLocking()
+    }
+}
+
 repositories {
 	mavenCentral()
 }
